# passninja-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
passninja/: __init__.py  passninja.py
test/: test_api.py
test/fixtures/: test_create.yaml  test_delete.yaml  test_get.yaml  test_put.yaml
