[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passninja"
version = "1.1.0"
authors = [
  { name="PassNinja", email="info@passninja.com" },
]
description = "PassNinja API library for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/flomio/passninja-python"
"Bug Tracker" = "https://github.com/flomio/passninja-python/issues"

